apps/test/whoami/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-http-route
  namespace: whoami
spec:
  parentRefs:
    - name: kookiedotmonster
      namespace: gateway
  hostnames:
    - "whoami.home.kookie.monster"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami
          port: 80
