apps/test/whoami/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
  selector:
    app: whoami
